simple: fix spacing at bottom of page

--- a/lesson.css
+++ b/lesson.css
@@ -3,7 +3,7 @@ body {
 }
 
 section {
-	margin: 5em 0;
+	margin: 5em 0 0;
 	clear: both;
 }
 
